made registration more precise; linked to Filis local info page from more places

--- a/_data/navbar.yaml
+++ b/_data/navbar.yaml
@@ -22,7 +22,7 @@ navbar:
   - title: Best Paper Awards
     url: best-paper-awards.html
   - title: Instructions for Presenters
-    url: presentation-instructions.html
+    url: https://ufal.mff.cuni.cz/events/sigdial-2015
   - title: Registration
     url: registration.html
   - title: Venue and Travel
