--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -18,5 +18,5 @@ sponsors:
     url: http://turnitin.com/
     logo: turnitin-logo.jpg
   - name: Interactions
-    url: http://www.research.att.com/
+    url: http://www.interactions.net/
     logo: interactions-logo.jpg
